<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="70dp"
              android:focusable="true"
              android:clickable="true"
              android:background="@drawable/item_background"
              android:layout_marginBottom="2dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/loading"
            android:id="@+id/show_name"/>

    <TextView
            android:layout_marginTop="-70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:paddingStart="0dp"
            android:paddingEnd="50dp"
            android:text="@string/score"
            android:id="@+id/score"/>

    <ImageView
            android:layout_marginTop="-70dp"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:id="@+id/star"
            android:title="@string/star"
            android:src="@drawable/star_gray_48"/>

</LinearLayout>